# cern-analysis-common

./: .gitignore  README.md  pyproject.toml  requirements.md
docs/: README.md
src/cern_analysis_common/: __init__.py  constants.py  hist.py  io.py  physics.py  plotting.py
src/cern_analysis_common/io/: __init__.py  hdf5.py  root.py  tabular.py
src/cern_analysis_common/ml/: __init__.py  metrics.py  preprocessing.py
src/cern_analysis_common/physics/: __init__.py  cuts.py  efficiency.py  four_vectors.py
src/cern_analysis_common/plotting/: __init__.py  hep_style.py  histograms.py
tests/: __init__.py  test_hist.py  test_io_parallel.py  test_physics.py
