[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cern-analysis-common"
version = "0.1.0"
description = "Shared infrastructure for CERN/HEP data analysis"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Deirikr Jaiusadastra Afrauthihinngreygaard"}
]
keywords = [
    "physics",
    "particle-physics",
    "CERN",
    "ALICE",
    "HEP",
    "ROOT",
    "data-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "uproot>=5.0",
    "awkward>=2.0",
]

[project.optional-dependencies]
full = [
    "h5py>=3.0",
    "openpyxl>=3.0",
    "vector>=1.0",
    "hist>=2.0",
    "mplhep>=0.3",
]
ml = [
    "scikit-learn>=1.0",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "cern-analysis-common[full,ml,dev]",
]

[project.urls]
Homepage = "https://github.com/Oichkatzelesfrettschen/cern-analysis-common"
Repository = "https://github.com/Oichkatzelesfrettschen/cern-analysis-common"
Issues = "https://github.com/Oichkatzelesfrettschen/cern-analysis-common/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cern_analysis_common"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B028"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
